projects/compiler/test/typechecker/set/error_type_mismatch_bindingdecl.2.out
Error at %FILE_NAME%:1:22
Type mismatch
  |  val a: Set<String> = "abcd"
                          ^
Expected: Set<String>
but instead found: String
